fixed fade left to fix overflow problem

--- a/style.css
+++ b/style.css
@@ -6,8 +6,15 @@
   --gray: #999999;
   --burntsienna: #e74c3c;
 }
+
 * {
   font-family: "Open Sans";
+  /* DEBUGGING CSS BELOW! GREAT CODE 
+  background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important;
+  */
+
 
 }
 body {
@@ -81,14 +88,14 @@ p {
 
 .textScrollAnimation {
   overflow:hidden;
-  position: relative;
+  /*position: relative;*/
   height:28px;
   font-weight: lighter;
 }
 span1 {
   color: #e74c3c;
   display: inline-block;
-  position: relative;
+  /*position: relative;*/
   white-space: nowrap;
   top: 0;
   left: 0;
